--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./apps/gd-file-uploader/test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -32,7 +33,7 @@
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "googleapis": "^144.0.0",
+    "googleapis": "^105.0.0",
     "joi": "^17.13.3",
     "nestjs-pino": "^4.2.0",
     "pg": "^8.13.1",
